@@ -349,6 +349,201 @@ tempus.date({year:2013, month:10, day:5}, {week: true, dayOfWeek: true});</code>
         
             
 <dt>
+    <h4 class="name" id="getDaysCountInMonth"><span class="type-signature"></span>getDaysCountInMonth<span class="signature">(month, year)</span><span class="type-signature"> &rarr; {number|undefined}</span></h4>
+    
+    
+</dt>
+<dd>
+    
+    
+    <div class="description">
+        <p>Returns days count in month.</p>
+    </div>
+    
+
+    
+    
+    
+    
+    
+        <h5>Parameters:</h5>
+        
+
+<table class="params">
+    <thead>
+	<tr>
+		
+		<th>Name</th>
+		
+		
+		<th>Type</th>
+		
+		
+		
+		
+		
+		<th class="last">Description</th>
+	</tr>
+	</thead>
+	
+	<tbody>
+	
+	
+        <tr>
+            
+                <td class="name"><code>month</code></td>
+            
+            
+            <td class="type">
+            
+                
+<span class="param-type">number</span>
+|
+
+<span class="param-type">string</span>
+
+
+            
+            </td>
+            
+            
+            
+            
+            
+            <td class="description last"><p>If number (1..12) - month index, also you can send
+  string - month name as (Jan..Dec), (January..December)
+  or, for example, (Янв..Дек) if you change locale (see setLocale).</p></td>
+        </tr>
+	
+	
+	
+        <tr>
+            
+                <td class="name"><code>year</code></td>
+            
+            
+            <td class="type">
+            
+                
+<span class="param-type">number</span>
+|
+
+<span class="param-type">undefined</span>
+
+
+            
+            </td>
+            
+            
+            
+            
+            
+            <td class="description last"><p>Year for checking. If it is undefined - leap year is false.</p></td>
+        </tr>
+	
+	
+	</tbody>
+</table>
+    
+    
+    
+<dl class="details">
+    
+        
+    
+    
+    
+
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    <dt class="tag-source">Source:</dt>
+    <dd class="tag-source"><ul class="dummy"><li>
+        <a href="tempus.js.html">tempus.js</a>, <a href="tempus.js.html#line376">line 376</a>
+    </li></ul></dd>
+    
+    
+    
+    
+    
+    
+    
+</dl>
+
+    
+    
+
+    
+
+    
+    
+    
+    
+    
+    <h5>Returns:</h5>
+    
+            
+<div class="param-desc">
+    <p>Returns days count or undefined if error occurred.</p>
+</div>
+
+
+
+<dl>
+	<dt>
+		Type
+	</dt>
+	<dd>
+		
+<span class="param-type">number</span>
+|
+
+<span class="param-type">undefined</span>
+
+
+	</dd>
+</dl>
+
+        
+    
+    
+        <h5>Examples</h5>
+        
+    <pre class="prettyprint"><code>// returns 30
+tempus.getDaysCountInMonth(11, 2013);</code></pre>
+
+    <pre class="prettyprint"><code>// returns 29
+tempus.getDaysCountInMonth(2, 2012);</code></pre>
+
+    <pre class="prettyprint"><code>// returns 28
+tempus.getDaysCountInMonth(2);</code></pre>
+
+    <pre class="prettyprint"><code>// returns 31
+tempus.getDaysCountInMonth('Jan');</code></pre>
+
+    <pre class="prettyprint"><code>// returns 30
+tempus.getDaysCountInMonth('September');</code></pre>
+
+    <pre class="prettyprint"><code>// returns 31
+tempus.setLocale('ru_RU');
+tempus.getDaysCountInMonth('Март');</code></pre>
+
+    
+</dd>
+
+        
+            
+<dt>
     <h4 class="name" id="isLeapYear"><span class="type-signature"></span>isLeapYear<span class="signature">(year)</span><span class="type-signature"> &rarr; {boolean}</span></h4>
     
     
@@ -859,13 +1054,13 @@ tempus.time('2013-03-15 15:21', '%Y-%m-%d %H:%M');</code></pre>
 </div>
 
 <nav>
-    <h2><a href="index.html">Index</a></h2><h3>Global</h3><ul><li><a href="global.html#date">date</a></li><li><a href="global.html#isLeapYear">isLeapYear</a></li><li><a href="global.html#now">now</a></li><li><a href="global.html#time">time</a></li></ul>
+    <h2><a href="index.html">Index</a></h2><h3>Global</h3><ul><li><a href="global.html#date">date</a></li><li><a href="global.html#getDaysCountInMonth">getDaysCountInMonth</a></li><li><a href="global.html#isLeapYear">isLeapYear</a></li><li><a href="global.html#now">now</a></li><li><a href="global.html#time">time</a></li></ul>
 </nav>
 
 <br clear="both">
 
 <footer>
-    Documentation generated by <a href="https://github.com/jsdoc3/jsdoc">JSDoc 3.3.0-alpha1</a> on Tue Nov 12 2013 16:09:14 GMT+0400 (MSK)
+    Documentation generated by <a href="https://github.com/jsdoc3/jsdoc">JSDoc 3.3.0-alpha1</a> on Tue Nov 12 2013 16:28:54 GMT+0400 (MSK)
 </footer>
 
 <script> prettyPrint(); </script>
