@@ -43,7 +43,7 @@
     <section>
         <article><h1>TempusJS</h1>
 <p>JavaScript library for most comfortable using date/time.</p>
-<p>Supports IE6+, Firefox, Chrome, Opera. <a href="http://crusat.github.io/tempus-js/tests.html">Check tests</a></p>
+<p>Supports IE6+, Firefox, Chrome, Opera. <a href="http://crusat.github.io/tempus-js/tests.html">Check tests in your browser</a></p>
 <p>Demo and description here: <a href="http://crusat.github.io/tempus-js/">http://crusat.github.io/tempus-js/</a></p>
 <p>Install over bower:</p>
 <pre><code class="lang-bash">    $ bower install tempus</code></pre>
@@ -125,9 +125,7 @@
         <td>UK and USA format (%m/%d/%Y).</td>
         <td>01/01/1970, ..., 08/22/2013, ...</td>
     </tr>
-</table>
-
-<p>Last version 0.1.29</p></article>
+</table></article>
     </section>
 
 
@@ -138,13 +136,13 @@
 </div>
 
 <nav>
-    <h2><a href="index.html">Index</a></h2><h3>Global</h3><ul><li><a href="global.html#date">date</a></li><li><a href="global.html#isLeapYear">isLeapYear</a></li><li><a href="global.html#now">now</a></li><li><a href="global.html#time">time</a></li></ul>
+    <h2><a href="index.html">Index</a></h2><h3>Global</h3><ul><li><a href="global.html#date">date</a></li><li><a href="global.html#getDaysCountInMonth">getDaysCountInMonth</a></li><li><a href="global.html#isLeapYear">isLeapYear</a></li><li><a href="global.html#now">now</a></li><li><a href="global.html#time">time</a></li></ul>
 </nav>
 
 <br clear="both">
 
 <footer>
-    Documentation generated by <a href="https://github.com/jsdoc3/jsdoc">JSDoc 3.3.0-alpha1</a> on Tue Nov 12 2013 16:09:14 GMT+0400 (MSK)
+    Documentation generated by <a href="https://github.com/jsdoc3/jsdoc">JSDoc 3.3.0-alpha1</a> on Tue Nov 12 2013 16:28:54 GMT+0400 (MSK)
 </footer>
 
 <script> prettyPrint(); </script>
