@@ -27,7 +27,7 @@
         <article>
             <pre class="prettyprint source"><code>/**
  * @author Aleksey Kuznetsov me@akuzn.com
- * @version 0.1.29
+ * @version 0.1.30
  * @url https://github.com/crusat/tempus-js
  * @description Library with date/time methods
  */
@@ -40,7 +40,7 @@
     var TempusJS = function () {
         // private
         var that = this;
-        var version = '0.1.29';
+        var version = '0.1.30';
         var locale = 'en_US';
         var weekStartsFromMonday = false;
         var daysInMonth = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31];
@@ -373,6 +373,33 @@
 
         // get days count in month method
         // from 1 to 12
+        /**
+         * Returns days count in month.
+         * @param month {number|string} If number (1..12) - month index, also you can send
+         *   string - month name as (Jan..Dec), (January..December)
+         *   or, for example, (Янв..Дек) if you change locale (see {@link setLocale}).
+         * @param year {number|undefined} Year for checking. If it is undefined - leap year is false.
+         * @returns {number|undefined} Returns days count or undefined if error occurred.
+         * @example
+         * // returns 30
+         * tempus.getDaysCountInMonth(11, 2013);
+         * @example
+         * // returns 29
+         * tempus.getDaysCountInMonth(2, 2012);
+         * @example
+         * // returns 28
+         * tempus.getDaysCountInMonth(2);
+         * @example
+         * // returns 31
+         * tempus.getDaysCountInMonth('Jan');
+         * @example
+         * // returns 30
+         * tempus.getDaysCountInMonth('September');
+         * @example
+         * // returns 31
+         * tempus.setLocale('ru_RU');
+         * tempus.getDaysCountInMonth('Март');
+         */
         this.getDaysCountInMonth = function (month, year) {
             var leapYear = year === undefined ? false : this.isLeapYear(year);
             if (typeof month === 'number') {
@@ -383,18 +410,18 @@
                 }
             }
             if (typeof month === 'string') {
-                var month_int = indexOf(locales[locale]["monthShortNames"], month);
+                var month_int = locales[locale]["monthShortNames"].indexOf(month);
                 if (month_int === -1) {
-                    month_int = indexOf(locales[locale]["monthLongNames"], month);
+                    month_int = locales[locale]["monthLongNames"].indexOf(month);
                 }
                 if (month_int === -1) {
                     return undefined;
                 }
                 month = month_int;
                 if (month === 2) {
-                    return daysInMonth[month - 1] + (leapYear ? 1 : 0);
+                    return daysInMonth[month] + (leapYear ? 1 : 0);
                 } else {
-                    return daysInMonth[month - 1]
+                    return daysInMonth[month]
                 }
             }
             return undefined;
@@ -803,13 +830,13 @@
 </div>
 
 <nav>
-    <h2><a href="index.html">Index</a></h2><h3>Global</h3><ul><li><a href="global.html#date">date</a></li><li><a href="global.html#isLeapYear">isLeapYear</a></li><li><a href="global.html#now">now</a></li><li><a href="global.html#time">time</a></li></ul>
+    <h2><a href="index.html">Index</a></h2><h3>Global</h3><ul><li><a href="global.html#date">date</a></li><li><a href="global.html#getDaysCountInMonth">getDaysCountInMonth</a></li><li><a href="global.html#isLeapYear">isLeapYear</a></li><li><a href="global.html#now">now</a></li><li><a href="global.html#time">time</a></li></ul>
 </nav>
 
 <br clear="both">
 
 <footer>
-    Documentation generated by <a href="https://github.com/jsdoc3/jsdoc">JSDoc 3.3.0-alpha1</a> on Tue Nov 12 2013 16:09:14 GMT+0400 (MSK)
+    Documentation generated by <a href="https://github.com/jsdoc3/jsdoc">JSDoc 3.3.0-alpha1</a> on Tue Nov 12 2013 16:28:54 GMT+0400 (MSK)
 </footer>
 
 <script> prettyPrint(); </script>
